samples/errors/match_missing_arrow.opal
;; Error: `~>` arrow is missing between the pattern and the result expression

(let try_match {}
  (match x
    0 1
    _ 2))

